# DBP-proyecto-final-API

./: API.py  README.md  app.py  data.db  database.sql  database_init.py  pyproject.toml
static/: cart.css  display-products.js  display.js  form.js  formNewProduct.js  formRegister.js  manageUrls.js  product.css  searchbar.js  user.css
templates/: index.html
